syntax = "proto3";

package Blocksettle.Communication.ProxyPb;

// Messages sent from PB to proxy and back.
// `Request` is sent from PB (proxy is a server here).

message Request
{
    message Terminal
    {
        string email = 1;

        // Serialized ProxyTerminalPb.Response
        bytes data = 2;
    }

    // Message would be sent after receiving ClientConnected
    message UserInfo
    {
        // Copied as-is from ClientConnected message
        bytes client_id = 1;

        string email = 2;

        // bs::network::UserType as int
        int32 user_type = 3;
    }

    oneof data
    {
        // Messages
        Terminal terminal = 30;
        UserInfo user_info = 31;
    }
}

// Messages sent from proxy to PB
message Response
{
    message OnlineUsers
    {
        int32 chat = 1;
        int32 market = 2;
        int32 trading = 3;
        int32 dealing = 4;
    }

    message Terminal
    {
        string email = 1;

        // Serialized ProxyTerminalPb.Request
        bytes data = 2;
    }

    message ClientConnected
    {
        string email = 1;

        // If set then PB should send user info back
        bytes client_id = 2;
    }

    message ClientDisconnected
    {
        string email = 1;
    }

    oneof data
    {
        // Messages
        Terminal terminal = 30;
        OnlineUsers online_users = 31;
        ClientConnected client_connected = 32;
        ClientDisconnected client_disconnected = 33;
    }
}
